tests/getters_and_setters_invalid/getters_and_setters_invalid.exp
Error -------------------------------------------------------------------------------- setter_class_missing_param.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo() {}
            ^^^



Found 1 error
setter_class_missing_param.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":52},
    "source":"setter_class_missing_param.js",
    "start":{"column":3,"line":6,"offset":49},
    "type":"SourceFile"
  },
  "path":"setter_class_missing_param.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"any (implicit)"}}
}

Error ------------------------------------------------------------------------------ setter_class_multiple_params.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(x: string, y: string) {}
            ^^^



Found 1 error
setter_class_multiple_params.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":72},
    "source":"setter_class_multiple_params.js",
    "start":{"column":3,"line":6,"offset":69},
    "type":"SourceFile"
  },
  "path":"setter_class_multiple_params.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"string"}}
}

Error ---------------------------------------------------------------------------- setter_interface_missing_param.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(): void
            ^^^



Found 1 error
setter_interface_missing_param.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":58},
    "source":"setter_interface_missing_param.js",
    "start":{"column":3,"line":6,"offset":55},
    "type":"SourceFile"
  },
  "path":"setter_interface_missing_param.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"any (implicit)"}}
}

Error -------------------------------------------------------------------------- setter_interface_multiple_params.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(x: string, y: string): void
            ^^^



Found 1 error
setter_interface_multiple_params.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":78},
    "source":"setter_interface_multiple_params.js",
    "start":{"column":3,"line":6,"offset":75},
    "type":"SourceFile"
  },
  "path":"setter_interface_multiple_params.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"string"}}
}

Error ------------------------------------------------------------------------------- setter_object_missing_param.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo() {}
            ^^^



Found 1 error
setter_object_missing_param.js:5:4
Flags: --pretty
{
  "end":5,
  "endline":5,
  "line":5,
  "loc":{
    "end":{"column":5,"line":5,"offset":36},
    "source":"setter_object_missing_param.js",
    "start":{"column":3,"line":5,"offset":33},
    "type":"SourceFile"
  },
  "path":"setter_object_missing_param.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"any (implicit)"}}
}

Error ----------------------------------------------------------------------------- setter_object_multiple_params.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(x: string, y: string) {}
            ^^^



Found 1 error
setter_object_multiple_params.js:5:4
Flags: --pretty
{
  "end":5,
  "endline":5,
  "line":5,
  "loc":{
    "end":{"column":5,"line":5,"offset":56},
    "source":"setter_object_multiple_params.js",
    "start":{"column":3,"line":5,"offset":53},
    "type":"SourceFile"
  },
  "path":"setter_object_multiple_params.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"string"}}
}

Error --------------------------------------------------------------------------------- setter_type_missing_param.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(): void
            ^^^



Found 1 error
setter_type_missing_param.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":55},
    "source":"setter_type_missing_param.js",
    "start":{"column":3,"line":6,"offset":52},
    "type":"SourceFile"
  },
  "path":"setter_type_missing_param.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"any (implicit)"}}
}

Error ------------------------------------------------------------------------------- setter_type_multiple_params.js:2:7

Setter should have exactly one parameter [ParseError]

   2|   set foo(x: string, y: string): void
            ^^^



Found 1 error
setter_type_multiple_params.js:6:4
Flags: --pretty
{
  "end":5,
  "endline":6,
  "line":6,
  "loc":{
    "end":{"column":5,"line":6,"offset":75},
    "source":"setter_type_multiple_params.js",
    "start":{"column":3,"line":6,"offset":72},
    "type":"SourceFile"
  },
  "path":"setter_type_multiple_params.js",
  "reasons":[],
  "start":3,
  "types":{"evaluated":null,"unevaluated":{"type":"string"}}
}

